--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "moment": "^2.22.0",
     "vue": "^2.5.2",
     "vue-google-autocomplete": "^1.1.0",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue2-leaflet": "^1.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
