--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "compression": "^1.7.2",
     "express": "^4.16.3",
+    "lodash": "^4.17.5",
     "moment": "^2.22.0",
     "vue": "^2.5.2",
     "vue-google-autocomplete": "^1.1.0",
