--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.18.0",
     "compression": "^1.7.2",
     "express": "^4.16.3",
+    "leaflet": "^1.3.1",
     "lodash": "^4.17.5",
     "moment": "^2.22.0",
     "vue": "^2.5.2",
