--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "leaflet": "^1.3.1",
     "lodash": "^4.17.5",
     "moment": "^2.22.0",
+    "polyline-encoded": "^0.0.8",
     "vue": "^2.5.2",
     "vue-google-autocomplete": "^1.1.0",
     "vue-router": "^3.0.1",
