--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-component": "^1.1.0",
     "compression": "^1.7.2",
+    "element-ui": "^2.3.4",
     "express": "^4.16.3",
     "leaflet": "^1.3.1",
     "lodash": "^4.17.5",
